fixed white space on header

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,7 +82,7 @@ hr {
 }
 #menu a.navbar-brand {
   font-family: "Raleway", sans-serif;
-  font-size: 24px;
+  font-size: 19px;
   font-weight: 700;
   color: #333;
   text-transform: uppercase;
@@ -213,7 +213,7 @@ a:focus,
   background-color: #e5e5e5;
   -webkit-background-size: cover;
   -moz-background-size: cover;
-  background-size: cover;
+  background-size: 100% 100%;
   -o-background-size: cover;
 }
 .intro .overlay {
@@ -604,12 +604,6 @@ label {
 @media (max-width: 768px) {
   #about img {
     margin: 50px 0;
-  }
-}
-
-@media (min-width: 768px) {
-  .container-h {
-    width: 750px
   }
 }
 
