--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 @media screen and (max-width: 400px) {
-  #features {
-    padding: 20px;
+  #header {
     width: 111%;
   }
   #about,
